<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"


    >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/darkcyan"
        android:layout_weight="0.6"
        android:textSize="20sp"
        android:text="@string/message"/>
            <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"

        android:textColorHint="@color/black"
        android:id="@+id/eMessage"
        android:textSize="30sp"
        android:textColor="@color/darkcyan"
        android:inputType="text"
        android:gravity="top"
        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:text="@string/to"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"

                android:textColor="@color/darkcyan"
                android:textColorHint="@color/black"
                android:id="@+id/eTo"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:text="@string/subject"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkcyan"
                android:inputType="textPassword"

                android:textColorHint="@color/black"
                android:id="@+id/eSubject"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textSize="20sp"
                android:textColor="@color/darkcyan"
                android:text="@string/lado"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:textColor="@color/darkcyan"
                android:textColorHint="@color/black"
                android:id="@+id/elado"
                android:textSize="30sp"
                />




        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/radioGr">

             <RadioButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/box0"
                 android:textSize="20sp"
                 android:textColor="@color/darkcyan"
                 android:onClick="onRadioButtonClicked"
                 android:id="@+id/radio0" />
             <RadioButton
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textColor="@color/darkcyan"
                 android:textSize="20sp"
                 android:text="@string/box1"
                 android:onClick="onRadioButtonClicked"
                 android:id="@+id/radio1" />


        </RadioGroup>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/edate"
        android:datePickerMode="spinner"

        >

    </DatePicker>
            <Spinner
                android:id="@+id/spinner1"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:prompt="@string/spinner" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:textColor="@color/darkcyan"
        android:textSize="20sp"
        android:text="@string/hobbis"/>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                <CheckBox android:id="@+id/cdepo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deporte"
                    android:textSize="20sp"
                    android:onClick="onCheckboxClicked"/>

                <CheckBox android:id="@+id/clecto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lectura"
                    android:textSize="20sp"
                    android:onClick="onCheckboxClicked"/>
                </LinearLayout>
                <LinearLayout

                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <CheckBox android:id="@+id/carte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arte"
                        android:textSize="20sp"
                        android:onClick="onCheckboxClicked"/>

                    <CheckBox android:id="@+id/cgames"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/games"
                        android:textSize="20sp"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>
            </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="center"
        android:background="@color/darkcyan"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:id="@+id/bSend"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/logg"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/pass"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/mail"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/salida"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/dateview"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/citi"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textColor="@color/darkcyan"
                android:textSize="20sp"
                android:id="@+id/hobbis"
                />


        </LinearLayout>
        </ScrollView>
    </RelativeLayout>
